--- a/mi.html
+++ b/mi.html
@@ -110,10 +110,10 @@
 		</ul>	
 		</div>
 		<div class="cannel">
-		<img src="img/xioami/1.jpg" alt="图片加载失败">	
+		<img src="img/xiaomi/1.jpg" alt="图片加载失败">	
 		</div>
 		<div class="cannel">
-		<img src="img/xioami/2.jpg" alt="图片加载失败">	
+		<img src="img/xiaomi/2.jpg" alt="图片加载失败">	
 		</div>
 		<div class="cannel2">
 		<img src="img/xiaomi/3.jpg" alt="图片加载失败">	
@@ -131,7 +131,7 @@
 	<div class="box1">
 		<div class="li">
 			<div class="time">20:00场</div>
-			<div class="sd"><img src="img/闪电.png" alt=""></div>
+			<div class="sd"><img src="img/shandian.png" alt=""></div>
 			<div class="sub">距离开始还有</div>
 			<div class="last">
 				<div class="box">20</div>
@@ -143,7 +143,7 @@
 		</div>
 		<div class="li">
 			<div class="time">20:00场</div>
-			<div class="sd"><img src="img/闪电.png" alt=""></div>
+			<div class="sd"><img src="img/shandian.png" alt=""></div>
 			<div class="sub">距离开始还有</div>
 			<div class="last">
 				<div class="box">20</div>
@@ -155,7 +155,7 @@
 		</div>
 		<div class="li">
 			<div class="time">20:00场</div>
-			<div class="sd"><img src="img/闪电.png" alt=""></div>
+			<div class="sd"><img src="img/shandian.png" alt=""></div>
 			<div class="sub">距离开始还有</div>
 			<div class="last">
 				<div class="box">20</div>
@@ -167,7 +167,7 @@
 		</div>
 		<div class="li">
 			<div class="time">20:00场</div>
-			<div class="sd"><img src="img/闪电.png" alt=""></div>
+			<div class="sd"><img src="img/shandian.png" alt=""></div>
 			<div class="sub">距离开始还有</div>
 			<div class="last">
 				<div class="box">20</div>
@@ -179,7 +179,7 @@
 		</div>
 		<div class="li">
 			<div class="time">20:00场</div>
-			<div class="sd"><img src="img/闪电.png" alt=""></div>
+			<div class="sd"><img src="img/shandian.png" alt=""></div>
 			<div class="sub">距离开始还有</div>
 			<div class="last">
 				<div class="box">20</div>
@@ -307,7 +307,7 @@
 				</li>
 				<li>
 					<div class="content"></div>
-					<img src="img/xiaomixiaomi/17.jpg" alt="">
+					<img src="img/xiaomi/17.jpg" alt="">
 					<div class="one">
 							红米6A
 						</div>
@@ -508,31 +508,31 @@
 		</div>
 		<ul>
 			<li>
-				<img src="img/xiaomixiaomi/30.jpg" alt="">
+				<img src="img/xiaomi/30.jpg" alt="">
 				<div class="one">红米6A 全网通版 2GB内存</div>
 				<div class="two">579元</div>
 				<div class="three">1190人好评</div>
 			</li>
 			<li>
-				<img src="img/xiaomixiaomi/31.jpg" alt="">
+				<img src="img/xiaomi/31.jpg" alt="">
 				<div class="one">红米6A 全网通版 2GB内存</div>
 				<div class="two">579元</div>
 				<div class="three">1190人好评</div>
 			</li>
 			<li>
-				<img src="img/xiaomixiaomi/32.jpg" alt="">
+				<img src="img/xiaomi/32.jpg" alt="">
 				<div class="one">红米6A 全网通版 2GB内存</div>
 				<div class="two">579元</div>
 				<div class="three">1190人好评</div>
 			</li>
 			<li>
-				<img src="img/xiaomixiaomi/33.jpg" alt="">
+				<img src="img/xiaomi/33.jpg" alt="">
 				<div class="one">红米6A 全网通版 2GB内存</div>
 				<div class="two">579元</div>
 				<div class="three">1190人好评</div>
 			</li>
 			<li>
-				<img src="img/xiaomixiaomi/34.jpg" alt="">
+				<img src="img/xiaomi/34.jpg" alt="">
 				<div class="one">红米6A 全网通版 2GB内存</div>
 				<div class="two">579元</div>
 				<div class="three">1190人好评</div>
@@ -779,7 +779,7 @@
 				</div>
 				
 			</div>
-			<div class="bottom"><img src="img/xiaomi/51(1).png" alt=""></div>
+			<div class="bottom"><img src="img/xiaomi/52.png" alt=""></div>
 		</div>
 	</div>
 	<div class="rightbar">
